Update to adapter vit on DSP.
Signed-off-by: Zhenqing Hu <hustc12@gmail.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -83,6 +83,7 @@ func_llm_add_executable(demo_minicpm_moe_mbm)
 func_vlm_add_executable(demo_llava)
 func_vlm_add_executable(demo_fuyu)
 func_vlm_add_executable(demo_vit)
+func_vlm_add_executable(demo_vit_dsp)
 func_vlm_add_executable(demo_clip)
 func_vlm_add_executable(demo_imagebind)
 func_vlm_add_executable(demo_imagebind_1mod)
