--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -58,6 +58,7 @@ endmacro()
 func_llm_add_executable(mllm_benchmark)
 func_llm_add_executable(demo_llama)
 func_llm_add_executable(demo_tinyllama)
+func_llm_add_executable(demo_tinyllama_dsp)
 func_llm_add_executable(demo_stablelm)
 func_llm_add_executable(demo_sparse_llama)
 func_llm_add_executable(demo_elastic_llama)
