--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -76,10 +76,10 @@ func_llm_add_executable(demo_smollm)
 func_llm_add_executable(demo_openelm)
 func_llm_add_executable(demo_dclm)
 func_llm_add_executable(demo_bert)
+func_llm_add_executable(demo_simple_conv)
 func_llm_add_executable(demo_phonelm)
 func_llm_add_executable(demo_llama3)
 func_llm_add_executable(demo_minicpm_moe_mbm)
-
 
 
 func_vlm_add_executable(demo_llava)
